# pypicamp

./: Dockerfile  README.md  docker-compose.yml  env.dist  pyproject.toml
bandersnatch/: Dockerfile  bandersnatch.conf
banderx/: Dockerfile  nginx.conf
pypicamp/: __main__.py  cli.py  contants.py  core.py
pypicamp/network/: cli.py  core.py
pypicamp/pypi/: __init__.py  cli.py  core.py
